# src/models/FlatRateEntry.ts
@@ -1,0 +1,6 @@
+interface FlatRateEntry {
+  payRate: string;
+  quantity: number;
+}
+
+export default FlatRateEntry;
