# src/models/PayrollReportSummaryEntry.ts
@@ -1,9 +1,0 @@
-interface PayrollReportSummaryEntry {
-  employeeId: string;
-  employeeName: string;
-  payrollCategory: string;
-  totalHours: number;
-  holidayHours: number;
-}
-
-export default PayrollReportSummaryEntry;
